# excelToDB

./: README.md  config.yml  main.py  pyproject.toml  requirements.txt  work.md
static/css/: style.css
static/js/: extract.js  sql.js  upload.js
templates/: base.html  extract.html  index.html  sql.html  upload.html
