[project]
name = "table_control"
version = "0.1.0"
description = "A Flask-based data control system with frontend interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "mysqlclient>=2.1.0",
    "werkzeug>=2.0.0"
]